--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 /[Bb]uilds/
 /Assets/AssetStoreTools*
 /[Ll]ibrary/metadata
-Library\metadata
+Library/
+Temp/
 
 # Visual Studio 2015 cache directory
 /.vs/
